--- a/Splendor/meta/take_gems_combination_testing.ipynb
+++ b/Splendor/meta/take_gems_combination_testing.ipynb
@@ -6,8 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\"This file almost exclusively written by chatgpt\n",
-    "as its only purpose is exploring tons of options\"\"\"\n",
+    "\"\"\"\"\n",
+    "This file almost exclusively written by chatgpt as \n",
+    "it's only a scratch file to explore tons of options\n",
+    "\"\"\"\n",
     "import itertools as it\n",
     "import numpy as np\n",
     "gems = [2, 3, 0, 4, 5]"
@@ -15,26 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1 1 1 0 0]\n",
-      " [1 1 0 1 0]\n",
-      " [1 1 0 0 1]\n",
-      " [1 0 1 1 0]\n",
-      " [1 0 1 0 1]\n",
-      " [1 0 0 1 1]\n",
-      " [0 1 1 1 0]\n",
-      " [0 1 1 0 1]\n",
-      " [0 1 0 1 1]\n",
-      " [0 0 1 1 1]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import itertools\n",
     "import tensorflow as tf\n",
@@ -79,32 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Broadcasted shape: (150, 5)\n",
-      "Sample combined rows:\n",
-      " [[ 1  1 -1 -1  0]\n",
-      " [ 1  1 -1  0 -1]\n",
-      " [ 1  1  0 -2  0]\n",
-      " [ 1  1  0 -1 -1]\n",
-      " [ 1  1  0  0 -2]\n",
-      " [-1  0  1  0  0]\n",
-      " [ 0 -1  1  0  0]\n",
-      " [ 0  0  0  0  0]\n",
-      " [ 0  0  1 -1  0]\n",
-      " [ 0  0  1  0 -1]]\n",
-      "\n",
-      "Number of valid rows: 10\n",
-      "Sample valid row:\n",
-      " [[0 0 0 0 0]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n_gems = 5\n",
     "k_pick = 2\n",
@@ -139,169 +101,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.Tensor([-1  1  0  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([0 0 0 0 0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  1 -1  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  1  0 -1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  1  0  0 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1 -1  0  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  0 -1  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  0  0 -1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  0  0  0 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  1 -2  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  1 -1 -1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  1 -1  0 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  1  0 -2  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  1  0 -1 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  1  0  0 -2], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1  0  1  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0 -1  1  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([0 0 0 0 0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0  1 -1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0  1  0 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1 -2  1  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1 -1  0  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1 -1  1 -1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1 -1  1  0 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  0 -1  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  0  0 -1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  0  0  0 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  0  1 -2  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  0  1 -1 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  0  1  0 -2], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1  0  0  1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0 -1  0  1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0 -1  1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([0 0 0 0 0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0  0  1 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1 -2  0  1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1 -1 -1  1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1 -1  0  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1 -1  0  1 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  0 -2  1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  0 -1  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  0 -1  1 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  0  0 -1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  0  0  0 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  0  0  1 -2], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1  0  0  0  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0 -1  0  0  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0 -1  0  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0  0 -1  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([0 0 0 0 0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1 -2  0  0  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1 -1 -1  0  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1 -1  0 -1  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1 -1  0  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  0 -2  0  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  0 -1 -1  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  0 -1  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  0  0 -2  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  0  0 -1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 1  0  0  0 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-2  1  1  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1  0  1  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1  1  0  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1  1  1 -1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1  1  1  0 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0 -1  1  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([0 0 0 0 0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0  1 -1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0  1  0 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  1 -1  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  1  0 -1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  1  0  0 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  1  1 -2  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  1  1 -1 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  1  1  0 -2], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-2  1  0  1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1  0  0  1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1  1 -1  1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1  1  0  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1  1  0  1 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0 -1  0  1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0 -1  1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([0 0 0 0 0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0  0  1 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  1 -2  1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  1 -1  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  1 -1  1 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  1  0 -1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  1  0  0 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  1  0  1 -2], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-2  1  0  0  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1  0  0  0  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1  1 -1  0  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1  1  0 -1  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1  1  0  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0 -1  0  0  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0 -1  0  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0  0 -1  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([0 0 0 0 0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  1 -2  0  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  1 -1 -1  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  1 -1  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  1  0 -2  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  1  0 -1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  1  0  0 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-2  0  1  1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1 -1  1  1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1  0  0  1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1  0  1  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1  0  1  1 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0 -2  1  1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0 -1  0  1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0 -1  1  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0 -1  1  1 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0 -1  1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([0 0 0 0 0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0  0  1 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0  1 -1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0  1  0 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0  1  1 -2], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-2  0  1  0  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1 -1  1  0  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1  0  0  0  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1  0  1 -1  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1  0  1  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0 -2  1  0  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0 -1  0  0  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0 -1  1 -1  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0 -1  1  0  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0 -1  0  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0  0 -1  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([0 0 0 0 0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0  1 -2  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0  1 -1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0  1  0 -1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-2  0  0  1  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1 -1  0  1  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1  0 -1  1  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1  0  0  0  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([-1  0  0  1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0 -2  0  1  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0 -1 -1  1  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0 -1  0  0  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0 -1  0  1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0 -2  1  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0 -1  0  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0 -1  1  0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0  0 -1  1], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([0 0 0 0 0], shape=(5,), dtype=int32)\n",
-      "tf.Tensor([ 0  0  0  1 -1], shape=(5,), dtype=int32)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in combined_2D:\n",
     "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.eye(3, dtype=np.int8)*2"
    ]
   }
  ],
