--- a/Splendor/meta/take_gems_combination_testing.ipynb
+++ b/Splendor/meta/take_gems_combination_testing.ipynb
@@ -2,47 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\"\n",
-    "This file almost exclusively written by chatgpt as \n",
-    "it's only a scratch file to explore tons of options\n",
-    "\"\"\"\n",
     "import itertools as it\n",
     "import numpy as np\n",
+    "import tensorflow as tf\n",
     "gems = [2, 3, 0, 4, 5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(1, 5), dtype=int8, numpy=array([[0, 0, 0, 0, 0]], dtype=int8)>"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import itertools\n",
-    "import tensorflow as tf\n",
-    "\n",
-    "# Number of gems and how many gems we want to take\n",
-    "n_gems = 5\n",
-    "k      = 3\n",
-    "\n",
-    "# Step 1: Enumerate all combinations of length k\n",
-    "combs = list(itertools.combinations(range(n_gems), k))\n",
-    "# e.g., [(0,1,2), (0,1,3), (0,1,4), (0,2,3), ..., (2,3,4)]\n",
-    "\n",
-    "# Step 2: Convert the Python list to a Tensor\n",
-    "combs_tf = tf.constant(combs, dtype=tf.int32)  # shape = (n_combs, k)\n",
-    "\n",
-    "# Step 3: Create one-hot vectors and sum along the combination dimension\n",
-    "# onehots will have shape = (n_combs, k, n_gems)\n",
-    "onehots = tf.one_hot(combs_tf, depth=n_gems, axis=-1, dtype=tf.int32)\n",
-    "\n",
-    "# Summing along axis=1 collapses each k-combination into a length-n_gems row\n",
-    "takes = tf.reduce_sum(onehots, axis=1)  # shape = (n_combs, n_gems)\n",
-    "\n",
-    "print(takes.numpy())\n"
+    "# Discards\n",
+    "k = 0\n",
+    "discard_k = list(it.combinations_with_replacement(range(5), k))\n",
+    "discard_k = tf.constant(discard_k, dtype=tf.int8)\n",
+    "discard_k = tf.one_hot(discard_k, depth=5, axis=-1, dtype=tf.int8)\n",
+    "discard_k = tf.reduce_sum(discard_k, axis=1)\n",
+    "discard_k"
    ]
   },
   {
@@ -51,15 +44,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Now form all pairs (pick_i, discard_j) by broadcasted subtraction\n",
-    "# takes[:, None, :] => shape (num_combos, 1, n_gems)\n",
-    "# takes[None, :, :] => shape (1, num_combos, n_gems)\n",
-    "# Subtract => shape (num_combos, num_combos, n_gems)\n",
-    "pick_discard_matrix = takes[:, None, :] - takes[None, :, :]\n",
+    "# Repeating discards in int32\n",
     "\n",
-    "# If desired, flatten from (num_combos, num_combos, n_gems) to (num_combos^2, n_gems)\n",
-    "pick_discard_matrix = tf.reshape(pick_discard_matrix, (-1, n_gems))\n",
-    "pick_discard_matrix"
+    "k = 3\n",
+    "discard_k = list(it.combinations_with_replacement(range(5), k))\n",
+    "discard_k = tf.constant(discard_k, dtype=tf.int32)\n",
+    "discard_k = tf.one_hot(discard_k, depth=5, axis=-1, dtype=tf.int32)\n",
+    "discard_k = tf.reduce_sum(discard_k, axis=1)\n",
+    "\n",
+    "# Take 3 different (or less?)\n",
+    "board_gems = [5, 0, 2, 0, 4]\n",
+    "\n",
+    "take_3 = list(it.combinations(range(5), 3))\n",
+    "take_3 = tf.constant(take_3, dtype=tf.int32)\n",
+    "\n",
+    "board_0_mask = tf.reduce_all(tf.gather(board_gems, take_3) > 0, axis=1)\n",
+    "take_3 = tf.boolean_mask(take_3, board_0_mask)\n",
+    "\n",
+    "take_3 = tf.one_hot(take_3, depth=5, axis=-1, dtype=tf.int32)\n",
+    "take_3 = tf.reduce_sum(take_3, axis=1)\n",
+    "\n",
+    "combined_3D = take_3[:, None, :] - discard_k[None, :, :]\n",
+    "combined_2D = tf.reshape(combined_3D, (-1, 5))\n",
+    "combined_2D\n"
    ]
   },
   {
@@ -68,35 +75,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_gems = 5\n",
-    "k_pick = 2\n",
-    "k_discard = 2\n",
+    "# Take 3 different (or less?)\n",
+    "board_gems = [5, 0, 2, 0, 4]\n",
     "\n",
-    "# 1. Enumerate picks (3 distinct)\n",
-    "picks_list = list(itertools.combinations(range(n_gems), k_pick))\n",
-    "picks_tf = tf.constant(picks_list, dtype=tf.int32)  # (P, k_pick)\n",
-    "picks_mat = tf.reduce_sum(tf.one_hot(picks_tf, depth=n_gems, axis=-1, dtype=tf.int32), axis=1) \n",
-    "# shape => (P, n_gems)\n",
+    "take_3 = list(it.combinations(range(5), 3))\n",
+    "take_3 = tf.constant(take_3, dtype=tf.int8)\n",
+    "take_3 = tf.one_hot(take_3, depth=5, axis=-1, dtype=tf.int8)\n",
+    "take_3 = tf.reduce_sum(take_3, axis=1)\n",
     "\n",
-    "# 2. Enumerate discards (3 gems, possibly repeating)\n",
-    "discards_list = list(itertools.combinations_with_replacement(range(n_gems), k_discard))\n",
-    "discards_tf = tf.constant(discards_list, dtype=tf.int32)  # (D, k_discard)\n",
-    "discards_mat = tf.reduce_sum(tf.one_hot(discards_tf, depth=n_gems, axis=-1, dtype=tf.int32), axis=1)\n",
-    "# shape => (D, n_gems)\n",
-    "\n",
-    "# 3. Combine via broadcasted subtraction => (P, D, n_gems)\n",
-    "combined_3D = picks_mat[:, None, :] - discards_mat[None, :, :]\n",
-    "combined_2D = tf.reshape(combined_3D, (-1, n_gems))  # shape = (P*D, n_gems)\n",
-    "\n",
-    "print(\"Broadcasted shape:\", combined_2D.shape)\n",
-    "print(\"Sample combined rows:\\n\", combined_2D[10:20].numpy())\n",
-    "\n",
-    "# 4. Optionally filter out invalid or undesired rows\n",
-    "mask_valid = tf.reduce_all(combined_2D >= 0, axis=1)\n",
-    "valid_rows = tf.boolean_mask(combined_2D, mask_valid)\n",
-    "\n",
-    "print(\"\\nNumber of valid rows:\", valid_rows.shape[0])\n",
-    "print(\"Sample valid row:\\n\", valid_rows[:1].numpy())\n"
+    "combined_3D = take_3[:, None, :] - discard_k[None, :, :]\n",
+    "combined_2D = tf.reshape(combined_3D, (-1, 5))\n",
+    "combined_2D\n"
    ]
   },
   {
@@ -105,8 +94,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in combined_2D:\n",
-    "    print(i)"
+    "board_gems = [5, 5, 5, 5, 5]\n",
+    "player_gems = [5, 5, 5, 5, 5]\n",
+    "\n",
+    "# Discards\n",
+    "k = 3\n",
+    "discard_k = list(it.combinations_with_replacement(range(5), k))\n",
+    "discard_k = tf.constant(discard_k, dtype=tf.int8)\n",
+    "discard_k = tf.one_hot(discard_k, depth=5, axis=-1, dtype=tf.int8)\n",
+    "discard_k = tf.reduce_sum(discard_k, axis=1)\n",
+    "\n",
+    "\n",
+    "# Take 3 different\n",
+    "take_3 = list(it.combinations(range(5), 3))\n",
+    "take_3 = tf.constant(take_3, dtype=tf.int32)\n",
+    "\n",
+    "# Masking out where there are no board gems\n",
+    "respective_board_gems = tf.gather(tf.cast(board_gems, tf.int32), take_3)\n",
+    "board_0_mask = tf.reduce_all(respective_board_gems > 0, axis=1)\n",
+    "take_3 = tf.boolean_mask(take_3, board_0_mask)\n",
+    "\n",
+    "take_3 = tf.one_hot(take_3, depth=5, axis=-1, dtype=tf.int8)\n",
+    "take_3 = tf.reduce_sum(take_3, axis=1)\n",
+    "\n",
+    "\n",
+    "# Take 2 same\n",
+    "take_2_same = tf.eye(5, dtype=tf.int8)*2\n",
+    "\n",
+    "# Masking out where there are not at least 4 board gems\n",
+    "board_4_mask = tf.greater_equal(board_gems, 4)\n",
+    "take_2_same = tf.boolean_mask(take_2_same, board_4_mask)\n",
+    "\n",
+    "\n",
+    "# Combine takes with discards\n",
+    "all_takes = tf.concat([take_3, take_2_same], axis=0)\n",
+    "combined_3D = all_takes[:, None, :] - discard_k[None, :, :]\n",
+    "combined_2D = tf.reshape(combined_3D, (-1, 5)) \n",
+    "combined_2D"
    ]
   },
   {
@@ -115,13 +139,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.eye(3, dtype=np.int8)*2"
+    "combined_2D_np = combined_2D.numpy()\n",
+    "unique_rows, counts = np.unique(combined_2D_np, axis=0, return_counts=True)\n",
+    "num_duplicates = np.sum(counts[counts > 1] - 1)\n",
+    "\n",
+    "print(f\"Total rows: {len(combined_2D_np)}, Duplicate rows: {num_duplicates}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "board_gems = [5, 5, 5, 5, 5]\n",
+    "player_gems = [5, 5, 5, 5, 5]\n",
+    "\n",
+    "# Discards\n",
+    "k = 3\n",
+    "discard_k = list(it.combinations_with_replacement(range(5), k))\n",
+    "discard_k = tf.constant(discard_k, dtype=tf.int8)\n",
+    "discard_k = tf.one_hot(discard_k, depth=5, axis=-1, dtype=tf.int8)\n",
+    "discard_k = tf.reduce_sum(discard_k, axis=1)\n",
+    "\n",
+    "\n",
+    "# Take 3 different\n",
+    "take_3 = list(it.combinations(range(5), 3))\n",
+    "take_3 = tf.constant(take_3, dtype=tf.int32)\n",
+    "\n",
+    "# Masking out where there are no board gems\n",
+    "respective_board_gems = tf.gather(tf.cast(board_gems, tf.int32), take_3)\n",
+    "board_0_mask = tf.reduce_all(respective_board_gems > 0, axis=1)\n",
+    "take_3 = tf.boolean_mask(take_3, board_0_mask)\n",
+    "\n",
+    "take_3 = tf.one_hot(take_3, depth=5, axis=-1, dtype=tf.int8)\n",
+    "take_3 = tf.reduce_sum(take_3, axis=1)\n",
+    "\n",
+    "\n",
+    "# Take 2 same\n",
+    "take_2_same = tf.eye(5, dtype=tf.int8)*2\n",
+    "\n",
+    "# Masking out where there are not at least 4 board gems\n",
+    "board_4_mask = tf.greater_equal(board_gems, 4)\n",
+    "take_2_same = tf.boolean_mask(take_2_same, board_4_mask)\n",
+    "\n",
+    "\n",
+    "# Combine takes with discards\n",
+    "all_takes = tf.concat([take_3, take_2_same], axis=0)\n",
+    "combined_3D = all_takes[:, None, :] - discard_k[None, :, :]\n",
+    "combined_2D = tf.reshape(combined_3D, (-1, 5)) \n",
+    "combined_2D"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -135,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
