near-working draft

--- a/Splendor/meta/take_gems_combination_testing.ipynb
+++ b/Splendor/meta/take_gems_combination_testing.ipynb
@@ -14,20 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: shape=(1, 5), dtype=int8, numpy=array([[0, 0, 0, 0, 0]], dtype=int8)>"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Discards\n",
     "k = 0\n",
@@ -190,6 +179,59 @@
     "combined_2D = tf.reshape(combined_3D, (-1, 5)) \n",
     "combined_2D"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Theoretical max take lengths\n",
+    "import tensorflow as tf\n",
+    "import itertools as it\n",
+    "\n",
+    "# Function to calculate the lengths of all_takes_k\n",
+    "def calculate_all_takes_lengths():\n",
+    "    # Take 3\n",
+    "    take_3 = list(it.combinations(range(5), 3))  # Combinations of 3 distinct gems\n",
+    "    take_3 = tf.constant(take_3, dtype=tf.int32)\n",
+    "    take_3 = tf.one_hot(take_3, depth=5, axis=-1, dtype=tf.int32)\n",
+    "    take_3 = tf.reduce_sum(take_3, axis=1)\n",
+    "    take_3_length = tf.shape(take_3)[0]\n",
+    "\n",
+    "    # Take 2: Includes Take 2 same and Take 2 diff\n",
+    "    take_2_diff = list(it.combinations(range(5), 2))  # Combinations of 2 distinct gems\n",
+    "    take_2_diff = tf.constant(take_2_diff, dtype=tf.int32)\n",
+    "    take_2_diff = tf.one_hot(take_2_diff, depth=5, axis=-1, dtype=tf.int32)\n",
+    "    take_2_diff = tf.reduce_sum(take_2_diff, axis=1)\n",
+    "    take_2_diff_length = tf.shape(take_2_diff)[0]\n",
+    "\n",
+    "    take_2_same = tf.eye(5, dtype=tf.int8) * 2  # Take 2 same\n",
+    "    take_2_same_length = tf.shape(take_2_same)[0]\n",
+    "\n",
+    "    take_2_length = take_2_diff_length + take_2_same_length\n",
+    "\n",
+    "    # Take 1\n",
+    "    take_1 = tf.eye(5, dtype=tf.int8)  # Take 1\n",
+    "    take_1_length = tf.shape(take_1)[0]\n",
+    "\n",
+    "    print(\"Theoretical lengths of all_takes_k:\")\n",
+    "    print(f\"Take 3 (all_takes_3): {take_3_length.numpy()}\")\n",
+    "    print(f\"Take 2 (all_takes_2): {take_2_length.numpy()}\")\n",
+    "    print(f\"  - Take 2 diff: {take_2_diff_length.numpy()}\")\n",
+    "    print(f\"  - Take 2 same: {take_2_same_length.numpy()}\")\n",
+    "    print(f\"Take 1 (all_takes_1): {take_1_length.numpy()}\")\n",
+    "\n",
+    "# Call the function to print the results\n",
+    "calculate_all_takes_lengths()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
