robust dim projections to and from model

--- a/Splendor/meta/take_gems_combination_testing.ipynb
+++ b/Splendor/meta/take_gems_combination_testing.ipynb
@@ -232,11 +232,104 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "import itertools as it\n",
+    "\n",
+    "\n",
+    "# Mock simplified version of the Player class\n",
+    "class Player:\n",
+    "    def __init__(self, action_dim=165):\n",
+    "        self.action_dim = action_dim\n",
+    "        self._initialize_all_takes()\n",
+    "        self.gems = np.zeros(6, dtype=int)\n",
+    "\n",
+    "    def _initialize_all_takes(self):\n",
+    "        \"\"\"Preloads all possible take indices.\"\"\"\n",
+    "        # Take 3\n",
+    "        take_3 = list(it.combinations(range(5), 3))\n",
+    "        take_3 = tf.constant(take_3, dtype=tf.int32)\n",
+    "        take_3 = tf.one_hot(take_3, depth=5, axis=-1, dtype=tf.int32)\n",
+    "        take_3 = tf.reduce_sum(take_3, axis=1)\n",
+    "        self.all_takes_3 = take_3\n",
+    "\n",
+    "        # Take 2\n",
+    "        take_2_diff = list(it.combinations(range(5), 2))\n",
+    "        take_2_diff = tf.constant(take_2_diff, dtype=tf.int32)\n",
+    "        take_2_diff = tf.one_hot(take_2_diff, depth=5, axis=-1, dtype=tf.int32)\n",
+    "        take_2_diff = tf.reduce_sum(take_2_diff, axis=1)\n",
+    "        self.all_takes_2_diff = take_2_diff\n",
+    "\n",
+    "        self.all_takes_2_same = tf.eye(5, dtype=tf.int32) * 2\n",
+    "\n",
+    "        # Take 1\n",
+    "        self.all_takes_1 = tf.eye(5, dtype=tf.int32)\n",
+    "\n",
+    "    def _scatter_legal_takes(self, legal_action_mask, board_mask, n_discards, offset):\n",
+    "        \"\"\"Update the legal action mask.\"\"\"\n",
+    "        legal_indices = tf.where(board_mask)\n",
+    "        legal_indices = tf.cast(tf.reshape(legal_indices, [-1]), tf.int32)\n",
+    "        if tf.size(legal_indices) == 0:\n",
+    "            print(\"No valid moves. Skipping.\")\n",
+    "            return legal_action_mask\n",
+    "\n",
+    "        action_indices = offset + legal_indices * n_discards + n_discards\n",
+    "        action_indices = tf.reshape(action_indices, [-1, 1])\n",
+    "        action_updates = tf.ones(tf.shape(action_indices)[0], dtype=tf.bool)\n",
+    "\n",
+    "        # Debug prints\n",
+    "        print(\"legal_indices:\", legal_indices.numpy())\n",
+    "        print(\"action_indices:\", action_indices.numpy())\n",
+    "        print(\"action_updates:\", action_updates.numpy())\n",
+    "\n",
+    "        legal_action_mask = tf.tensor_scatter_nd_update(legal_action_mask, action_indices, action_updates)\n",
+    "        return legal_action_mask\n",
+    "\n",
+    "    def _get_legal_takes(self, board_gems):\n",
+    "        \"\"\"Get the legal takes.\"\"\"\n",
+    "        n_gems = self.gems.sum()\n",
+    "        board_gems = tf.constant(board_gems[:5], dtype=tf.int32)\n",
+    "        legal_take_mask = tf.zeros([self.action_dim], dtype=tf.bool)\n",
+    "        offset = 0\n",
+    "\n",
+    "        # Take 3\n",
+    "        n_discards = max(0, -7 + n_gems)\n",
+    "        board_gt0_mask = board_gems > 0\n",
+    "        takes_mask = tf.cast(self.all_takes_3, tf.bool)\n",
+    "        takes_ltboard_mask = tf.reduce_all(takes_mask & board_gt0_mask, axis=1)\n",
+    "        legal_take_mask = self._scatter_legal_takes(legal_take_mask, takes_ltboard_mask, n_discards, offset)\n",
+    "        offset += tf.shape(takes_ltboard_mask)[0]\n",
+    "\n",
+    "        # Return final legal_take_mask\n",
+    "        return legal_take_mask\n",
+    "\n",
+    "\n",
+    "# Standalone test\n",
+    "player = Player()\n",
+    "\n",
+    "# Input gems and board setup\n",
+    "player_gems = [1, 1, 1, 0, 0, 1]  # Player's gems (last is gold)\n",
+    "board_gems = [2, 0, 3, 5, 0]      # Gems available on the board\n",
+    "player.gems = np.array(player_gems)\n",
+    "\n",
+    "# Test the _get_legal_takes function\n",
+    "print(\"Testing _get_legal_takes\")\n",
+    "legal_take_mask = player._get_legal_takes(board_gems)\n",
+    "print(\"\\nResulting legal_take_mask:\")\n",
+    "print(legal_take_mask.numpy())\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -250,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
